upload all files

--- a/products/platingcoating/tinplating/index.html
+++ b/products/platingcoating/tinplating/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title data-i18n-key="title">BASn 4140 — น้ำยาชุบดีบุกเงา | Baume Chemical Blog</title>
+  <title data-i18n-key="title">BASn 4140 — น้ำยาชุบดีบุกเงา | Baume Chemical</title>
 
   <!-- SEO base -->
   <meta name="description" content="BASn 4140 น้ำยาชุบดีบุกเงาคุณภาพสูง: สัดส่วนการผสม ขั้นตอนการชุบ พารามิเตอร์การทำงาน อุปกรณ์ที่จำเป็น และเหตุผลที่ควรใช้แอโนดดีบุกบริสุทธิ์ 99.9%">
   <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
-  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/tinplating/index.html">
+  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/tinplating/basn-4140/">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
@@ -17,26 +17,126 @@
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph -->
-  <meta property="og:type" content="article">
-  <meta property="og:site_name" content="Baume Chemical">
-  <meta property="og:title" content="BASn 4140 — น้ำยาชุบดีบุกเงา">
-  <meta property="og:description" content="สัดส่วนการผสม ขั้นตอนชุบ พารามิเตอร์ อุปกรณ์ และเหตุผลที่ใช้ Tin Anode 99.9%">
-  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/tinplating/index.html">
-  <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/thumbnail1.jpg">
-  <meta name="twitter:card" content="summary_large_image">
+<meta property="og:type" content="product">
+<meta property="og:site_name" content="Baume Chemical">
+<meta property="og:title" content="BASn 4140 — น้ำยาชุบดีบุกเงา">
+<meta property="og:description" content="สัดส่วนการผสม ขั้นตอนชุบ พารามิเตอร์ อุปกรณ์ และเหตุผลที่ใช้ Tin Anode 99.9%">
+<meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/tinplating/basn-4140/">
+<meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/thumbnail1.jpg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<meta property="og:image:alt" content="Bright tin plating bath (BASn 4140) — high gloss, low haze">
 
-  <script type="application/ld+json">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="BASn 4140 — น้ำยาชุบดีบุกเงา">
+<meta name="twitter:description" content="สัดส่วนการผสม ขั้นตอนชุบ พารามิเตอร์ อุปกรณ์ และเหตุผลที่ใช้ Tin Anode 99.9%">
+<meta name="twitter:image" content="https://img5.pic.in.th/file/secure-sv1/thumbnail1.jpg">
+
+<link rel="preconnect" href="https://img5.pic.in.th" crossorigin>
+
+<script type="application/ld+json">
 {
-  "@context": "https://schema.org/",
-  "@type": "Product",
-  "name": "BASn 4140 — น้ำยาชุบดีบุกเงา",
-  "description": "น้ำยาชุบดีบุกเงาคุณภาพสูง: สัดส่วนการผสม ขั้นตอนการชุบ พารามิเตอร์การทำงาน อุปกรณ์ที่จำเป็น และเหตุผลที่ควรใช้แอโนดดีบุกบริสุทธิ์ 99.9%",
-  "image": "https://img5.pic.in.th/file/secure-sv1/thumbnail1.jpg",
-  "brand": {"@type": "Brand","name": "Baume Chemical"},
-  "category": "Tin Plating",
-  "inLanguage": "th",
-  "offers": {"@type": "Offer","url": "https://www.baumechemical.com/products/platingcoating/tinplating/index.html","priceCurrency": "THB","price": "0.00","availability": "https://schema.org/InStock"},
-  "aggregateRating": {"@type":"AggregateRating","ratingValue":"5","reviewCount":"10"}
+  "@context":"https://schema.org",
+  "@type":"Product",
+  "name":"BASn 4140 — น้ำยาชุบดีบุกเงา",
+  "sku":"BASn-4140",
+  "mpn":"BASn-4140",
+  "brand":{"@type":"Brand","name":"Baume Chemical"},
+  "category":"Tin Plating",
+  "inLanguage":"th",
+  "description":"น้ำยาชุบดีบุกเงาคุณภาพสูง: สัดส่วนการผสม ขั้นตอนการชุบ พารามิเตอร์การทำงาน อุปกรณ์ที่จำเป็น และเหตุผลที่ควรใช้แอโนดดีบุกบริสุทธิ์ 99.9%",
+  "image":"https://img5.pic.in.th/file/secure-sv1/thumbnail1.jpg",
+  "url":"https://www.baumechemical.com/products/platingcoating/tinplating/basn-4140/",
+  "audience":{"@type":"Audience","audienceType":"Industrial / Electronics / Automotive"},
+  "additionalProperty":[
+    {"@type":"PropertyValue","name":"Stannous sulfate","value":"30","unitCode":"GRM","valueReference":"g/L"},
+    {"@type":"PropertyValue","name":"Sulfuric acid","value":"100","unitCode":"2Z","valueReference":"cc/L"},
+    {"@type":"PropertyValue","name":"BASn 4141 (Brightener)","value":"5","unitCode":"2Z","valueReference":"cc/L"},
+    {"@type":"PropertyValue","name":"BASn 4142 (Additive)","value":"4","unitCode":"2Z","valueReference":"cc/L"},
+    {"@type":"PropertyValue","name":"Temperature","value":"18–24 °C"},
+    {"@type":"PropertyValue","name":"Current density","value":"0.5–5 A/dm²"}
+  ],
+  "isRelatedTo":{
+    "@type":"Product",
+    "name":"Tin Anode 99.9%",
+    "url":"https://www.baumechemical.com/products/equipment/#tin-anode"
+  },
+  "offers":{
+    "@type":"Offer",
+    "url":"https://www.baumechemical.com/products/platingcoating/tinplating/basn-4140/",
+    "availability":"https://schema.org/InStock",
+    "priceCurrency":"THB"
+  },
+  "hasPart":[
+    {"@type":"CreativeWork","@id":"#howto-makeup"},
+    {"@type":"CreativeWork","@id":"#howto-process"}
+  ]
+}
+</script>
+
+<!-- HowTo: Make-up -->
+<script type="application/ld+json">
+{
+  "@context":"https://schema.org",
+  "@type":"HowTo",
+  "@id":"#howto-makeup",
+  "name":"BASn 4140 — การเตรียมสารละลาย (Make-up)",
+  "inLanguage":"th",
+  "supply":[
+    {"@type":"HowToSupply","name":"Stannous sulfate"},
+    {"@type":"HowToSupply","name":"Sulfuric acid"},
+    {"@type":"HowToSupply","name":"BASn 4140/4141/4142"},
+    {"@type":"HowToSupply","name":"DI water"}
+  ],
+  "tool":[
+    {"@type":"HowToTool","name":"ถังชุบบุ PVC/PP"},
+    {"@type":"HowToTool","name":"เครื่องกวน/ระบบทำความเย็น"},
+    {"@type":"HowToTool","name":"เครื่องกรอง 10 µm"}
+  ],
+  "step":[
+    {"@type":"HowToStep","text":"เติมน้ำกลั่น ~50% ของปริมาตรบ่อ"},
+    {"@type":"HowToStep","text":"ค่อยๆ เติมกรดกำมะถันลงในน้ำ พร้อมคน และรอเย็น"},
+    {"@type":"HowToStep","text":"เติมสแตนนัสซัลเฟต 3 กก. คนจนละลาย"},
+    {"@type":"HowToStep","text":"เติมน้ำกลั่นเพิ่มจน ~90%"},
+    {"@type":"HowToStep","text":"ทำให้บ่ออยู่ ~25 °C แล้วเจือจาง 4140/4141/4142 1:1 ก่อนเทลงบ่อ"},
+    {"@type":"HowToStep","text":"ปรับปริมาตรสุดท้ายด้วย DI water"}
+  ]
+}
+</script>
+
+<!-- HowTo: Plating steps -->
+<script type="application/ld+json">
+{
+  "@context":"https://schema.org",
+  "@type":"HowTo",
+  "@id":"#howto-process",
+  "name":"BASn 4140 — ขั้นตอนการชุบ",
+  "inLanguage":"th",
+  "step":[
+    {"@type":"HowToStep","text":"เตรียมชิ้นงาน ทำความสะอาด/รองพื้น"},
+    {"@type":"HowToStep","text":"กระตุ้นผิว จุ่ม H2SO4 5–10%"},
+    {"@type":"HowToStep","text":"ล้างน้ำ"},
+    {"@type":"HowToStep","text":"ชุบดีบุกใน BASn 4140 ตามพารามิเตอร์"},
+    {"@type":"HowToStep","text":"ล้างน้ำ 2–3 ขั้น"},
+    {"@type":"HowToStep","text":"จุ่มด่าง NaOH 2–5% แล้วล้าง"},
+    {"@type":"HowToStep","text":"อบแห้ง"}
+  ]
+}
+</script>
+
+<!-- Breadcrumbs -->
+<script type="application/ld+json">
+{
+  "@context":"https://schema.org",
+  "@type":"BreadcrumbList",
+  "itemListElement":[
+    {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
+    {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products.html"},
+    {"@type":"ListItem","position":3,"name":"Plating & Coating","item":"https://www.baumechemical.com/products/platingcoating/"},
+    {"@type":"ListItem","position":4,"name":"Tin Plating","item":"https://www.baumechemical.com/products/platingcoating/tinplating/"},
+    {"@type":"ListItem","position":5,"name":"BASn 4140","item":"https://www.baumechemical.com/products/platingcoating/tinplating/basn-4140/"}
+  ]
 }
 </script>
 
@@ -440,7 +540,7 @@
           </table>
         </div>
 
-        <h3 class="features__title" class="section" data-i18n-key="equip_h">อุปกรณ์ที่จำเป็น</h3>
+        <h3 class="features__title section" data-i18n-key="equip_h">
         <div class="content">
           <ul>
             <li data-i18n-key="equip_1">บ่อชุบ: บุด้วยคลอโรซีล, PVC, PE หรือ PP</li>
@@ -530,7 +630,7 @@
   <script>
     const I18N = {
       th: {
-        title:"BASn 4140 — น้ำยาชุบดีบุกเงา | Baume Chemical Blog",
+        title:"BASn 4140 — น้ำยาชุบดีบุกเงา | Baume Chemical",
         nav_home:"Home", nav_about:"About us", nav_products:"Products", nav_contact:"Contact Us", nav_blog:"Blog",
         back_home:"← กลับเมนูหลัก",
         hero_title:"BASn 4140: น้ำยาชุบดีบุกเงา",
@@ -617,7 +717,7 @@
       },
 
       en: {
-        title:"BASn 4140 Bright Tin Plating — Practical Guide | Baume Chemical Blog",
+        title:"BASn 4140 — Bright Tin Plating | Baume Chemical",
         nav_home:"Home", nav_about:"About us", nav_products:"Products", nav_contact:"Contact Us", nav_blog:"Blog",
         back_home:"← Back to Home",
         hero_title:"BASn 4140 Bright Tin Plating",
