upload all files

--- a/products/platingcoating/zincplating/index.html
+++ b/products/platingcoating/zincplating/index.html
@@ -20,6 +20,8 @@
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:locale" content="th_TH">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
   <meta property="og:locale:alternate" content="en_US">
   <meta property="og:title" content="น้ำยาชุบซิงค์หรือสังกะสี (Zinc Plating Solutions) | Baume Chemical">
   <meta property="og:description" content="Cyanide / Acid (Ammonium) / Non-Cyanide สำหรับงานถังแขวนและถังกลิ้ง เงาดี กระจายผิวเยี่ยม ทนการกัดกร่อน.">
@@ -31,12 +33,13 @@
   <!-- JSON-LD (compressed) -->
   <script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","name":"Baume Chemical","url":"https://www.baumechemical.com/","logo":"https://www.baumechemical.com/assets/logo.png","sameAs":["https://line.me/ti/p/~baumechemical"]}</script>
   <script type="application/ld+json">{"@context":"https://schema.org","@type":"CollectionPage","name":"Zinc Plating Solutions","inLanguage":"th","url":"https://www.baumechemical.com/products/platingcoating/zincplating/","description":"Cyanide, Ammonium Acid, and Cyanide-free zinc plating solutions for rack and barrel with strong brightness and distribution."}</script>
-  <script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},{"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products/"},{"@type":"ListItem","position":3,"name":"Zinc Plating Solutions","item":"https://www.baumechemical.com/products/platingcoating/zincplating/"}]}</script>
+  <script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},{"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products.html"},{"@type":"ListItem","position":3,"name":"Zinc Plating Solutions","item":"https://www.baumechemical.com/products/platingcoating/zincplating/"}]}</script>
   <script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Zinc Plating Types","itemListOrder":"https://schema.org/ItemListOrderAscending","itemListElement":[{"@type":"ListItem","position":1,"url":"#cyanide"},{"@type":"ListItem","position":2,"url":"#ammonium-acid"},{"@type":"ListItem","position":3,"url":"#non-cyanide"}]}</script>
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://flagcdn.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
   <link rel="preload" as="image" href="https://img5.pic.in.th/file/secure-sv1/thumbnail-8.jpg">
 
@@ -335,11 +338,12 @@ body.no-scroll{ position:fixed; width:100% }
         <!-- Primary Navigation -->
         <nav class="primary-nav" aria-label="Primary">
           <ul class="menu">
-            <li><a href="https://www.baumechemical.com/index.html" class="nav-link">Home</a></li>
-            <li><a href="https://www.baumechemical.com/about-us.html" class="nav-link">About us</a></li>
-            <li><a href="https://www.baumechemical.com/products.html" class="nav-link" aria-current="page">Products</a></li>
-            <li><a href="https://www.baumechemical.com/contact-us.html" class="nav-link">Contact Us</a></li>
-            <li><a href="https://www.baumechemical.com/blog/index.html" class="nav-link" data-i18n-key="nav_contact">Blog</a></li>
+        <li><a href="https://www.baumechemical.com/index.html"  class="nav-link" data-i18n-key="nav_home">Home</a></li>
+        <li><a href="https://www.baumechemical.com/about-us.html" class="nav-link" data-i18n-key="nav_about">About us</a></li>
+        <li><a href="https://www.baumechemical.com/products.html"  class="nav-link" data-i18n-key="nav_products" aria-current="page">Products</a></li>
+        <li><a href="https://www.baumechemical.com/contact-us.html" class="nav-link" data-i18n-key="nav_contact">Contact Us</a></li>
+        <li><a href="https://www.baumechemical.com/blog/index.html" class="nav-link" data-i18n-key="nav_blog">Blog</a></li>
+
 
             <!-- Mobile language row -->
             <li class="lang-li">
@@ -384,7 +388,7 @@ body.no-scroll{ position:fixed; width:100% }
     </div>
 
     <div class="hero-inner wrap" style="padding:22px 16px">
-      <h1 data-i18n-key="hero_title">Zinc Plating Solution</h1>
+      <h1 data-i18n-key="hero_title">Zinc Plating Solutions</h1>
       <p data-i18n-key="hero_tagline">โซลูชันชุบซิงค์หรือสังกะสีสำหรับงานอุตสาหกรรม ครอบคลุมระบบไซยาไนด์ กรดแอมโมเนียม และแบบไร้ไซยาไนด์ เหมาะกับถังกลิ้ง/ถังแขวน เน้นความเงา การกระจายตัว และความทนการกัดกร่อน พร้อมทีมเทคนิคดูแลหน้างาน</p>
 
       <!-- Pretty bullets (3 items) -->
@@ -395,7 +399,7 @@ body.no-scroll{ position:fixed; width:100% }
       </div>
 
       <div class="actions">
-        <a class="btn" href="products.html" data-i18n-key="btn_products">ดูหมวดผลิตภัณฑ์</a>
+        <a class="btn" href="/products.html" data-i18n-key="btn_products">ดูหมวดผลิตภัณฑ์</a>
         <a class="btn ghost" href="https://www.baumechemical.com/contact-us/" data-i18n-key="btn_consult">ปรึกษาทีมเทคนิค</a>
       </div>
     </div>
@@ -597,7 +601,7 @@ body.no-scroll{ position:fixed; width:100% }
     const I18N = {
       th:{
         meta_title:"น้ำยาชุบซิงค์หรือสังกะสี (Zinc Plating Solutions) | Baume Chemical",
-        hero_title:"Zinc Plating Solution",
+        hero_title:"Zinc Plating Solutions",
         hero_tagline:"โซลูชันชุบซิงค์หรือสังกะสีสำหรับงานอุตสาหกรรม ครอบคลุมระบบไซยาไนด์ กรดแอมโมเนียม และแบบไร้ไซยาไนด์ เหมาะกับถังกลิ้ง/ถังแขวน เน้นความเงา การกระจายตัว และความทนการกัดกร่อน พร้อมทีมเทคนิคดูแลหน้างาน",
         btn_products:"ดูหมวดผลิตภัณฑ์", btn_consult:"ปรึกษาทีมเทคนิค", btn_back:"ย้อนกลับ",
         b1:"เงาสูง กระจายผิวกว้าง", b2:"รองรับ Rack/Barrel", b3:"เลือกได้ CYA/Acid/NCN",
@@ -619,7 +623,7 @@ body.no-scroll{ position:fixed; width:100% }
       },
       en:{
         meta_title:"Zinc Plating Solutions | Baume Chemical",
-        hero_title:"Zinc Plating Solution",
+        hero_title:"Zinc Plating Solutions",
         hero_tagline:"Industrial zinc plating solutions covering Cyanide, Ammonium Acid, and Cyanide-Free systems for rack/barrel lines—bright finishes, strong distribution, and corrosion resistance.",
         btn_products:"Browse Products", btn_consult:"Talk to a Specialist", btn_back:"Back",
         b1:"High gloss, wide throwing", b2:"Works with Rack/Barrel", b3:"Pick CYA / Acid / NCN",
