upload all files

--- a/products/platingcoating/nickelplating/troubleshootingnickelsatin/index.html
+++ b/products/platingcoating/nickelplating/troubleshootingnickelsatin/index.html
@@ -32,7 +32,7 @@
     "headline":"Satin Nickel — นิกเกิลซาติน",
     "image":"https://i.imgur.com/AdVs5qK.jpeg",
     "author":{"@type":"Organization","name":"Baume Chemical"},
-    "alternateName":["Baume Chemical","Baume"]
+    "alternateName":["Baume Chemical","Baume"],
     "inLanguage":"th",
     "about":"Satin nickel plating: processes, make-up, operating window, consumption and bath control notes."
   }
