--- a/products/platingcoating/zincplating/troubleshootingacidzinc/index.html
+++ b/products/platingcoating/zincplating/troubleshootingacidzinc/index.html
@@ -24,6 +24,8 @@
   <meta property="og:description" content="ฟีเจอร์ 6 ข้อ สูตร Make‑up สภาวะเดินงาน อัตราส่วนบ่อ การเติม การแก้ปัญหา การจัดการเหล็ก และความปลอดภัย">
   <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/zincplating/troubleshootingacidzinc/index.html">
   <meta property="og:image" content="https://i.imgur.com/rn66CQu.jpeg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
   <meta name="twitter:card" content="summary_large_image">
 
   <script type="application/ld+json">
@@ -36,7 +38,6 @@
     "brand": {"@type": "Brand","name": "Baume Chemical"},
     "category": "Zinc Plating",
     "inLanguage": "th",
-    "offers": {"@type": "Offer","url": "https://www.baumechemical.com/products/platingcoating/zincplating/troubleshootingacidzinc/index.html","priceCurrency": "THB","price": "0.00","availability": "https://schema.org/InStock"},
     "aggregateRating": {"@type":"AggregateRating","ratingValue":"5","reviewCount":"12"}
   }
   </script>
@@ -227,7 +228,7 @@
         <span class="bar"></span>
       </button>
 
-      <nav id="primary-nav" class="primary-nav" aria-label="Primary" aria-hidden="true">
+      <nav id="primary-nav" class="primary-nav" aria-label="Primary">
         <a href="https://www.baumechemical.com/index.html" data-i18n-key="nav_home">Home</a>
         <a href="https://www.baumechemical.com/about-us.html" data-i18n-key="nav_about">About us</a>
         <a href="https://www.baumechemical.com/products.html" data-i18n-key="nav_products" aria-current="page">Products</a>
@@ -389,8 +390,8 @@
             </thead>
             <tbody>
               <tr><td data-i18n-key="cond_anode">ขั้วแอโนด</td><td data-i18n-key="cond_anode_v">แผ่นซิงค์บริสุทธิ์ 99.99%</td><td>—</td></tr>
-              <tr><td data-i18n-key="cond_cdan">ความหนาแน่นกระแส (แอโนด)</td><td>0.1–5</td><td><span data-i18n-key="unit_adm2">A/dm²</span></td></tr>
-              <tr><td data-i18n-key="cond_cdcath">ความหนาแน่นกระแส (แคโทด)</td><td>1–3</td><td><span data-i18n-key="unit_adm2">A/dm²</span></td></tr>
+<tr><td data-i18n-key="cond_cdan">ความหนาแน่นกระแส (แอโนด)</td><td>0.1–5 <span data-i18n-key="unit_adm2">A/dm²</span></td><td>—</td></tr>
+<tr><td data-i18n-key="cond_cdcath">ความหนาแน่นกระแส (แคโทด)</td><td>1–3 <span data-i18n-key="unit_adm2">A/dm²</span></td><td>—</td></tr>
               <tr><td data-i18n-key="cond_volt">โวลต์</td><td data-i18n-key="cond_volt_v">ถังแขวน ~1 V, ถังกลิ้ง 4–9 V</td><td>—</td></tr>
               <tr><td data-i18n-key="cond_filter">การกรอง</td><td colspan="2" data-i18n-key="cond_filter_v">ควรกรองต่อเนื่อง อย่างน้อยชั่วโมงละ 2 ครั้ง</td></tr>
               <tr><td data-i18n-key="cond_agit">การกวน</td><td colspan="2" data-i18n-key="cond_agit_v">แนะนำใช้การกวนด้วยลม และเป่าลมต่อเนื่อง</td></tr>
@@ -454,8 +455,8 @@
               </tr>
             </thead>
             <tbody>
-              <tr><td data-i18n-key="add_m">ยาพื้นซิงค์กรดแอมโมเนีย</td><td>100–200 <span data-i18n-key="unit_ccl">ซีซี/ลิตร</span></td></tr>
-              <tr><td data-i18n-key="add_r">ยาเงาซิงค์กรดแอมโมเนีย</td><td>100–150 <span data-i18n-key="unit_ccl">ซีซี/ลิตร</span></td></tr>
+<tr><td data-i18n-key="add_m">ยาพื้นซิงค์กรดแอมโมเนีย</th><td data-i18n-key="add_m1">100–200 มล./1,000 Ah ต่อบ่อ 1,000 ลิตร</td/tr>
+<tr><td data-i18n-key="add_r">ยาเงาซิงค์กรดแอมโมเนีย</td><td data-i18n-key="add_r1">100–150 มล./1,000 Ah ต่อบ่อ 1,000 ลิตร</td></tr>
             </tbody>
           </table>
         </div>
@@ -619,7 +620,7 @@
         mk_zncl2:"ซิงค์คลอไรด์", mk_nh4cl:"แอมโมเนียมคลอไรด์", mk_m:"ยาพื้นซิงค์กรดแอมโมเนีย (ACIDZINC 99 M)", mk_r:"ยาเงาซิงค์กรดแอมโมเนีย (ACIDZINC 99 R)",
 
         add_h:"การปรับเติมน้ำยาพื้น–ยาเงา", add_lead:"ทุก ๆ 1,000 Ah ให้เติมโดยประมาณ (อ้างอิงจาก Hull‑cell และผลผลิตจริง)",
-        add_th_item:"รายการ", add_th_rate:"อัตราแนะนำ", add_m:"ยาพื้นซิงค์กรดแอมโมเนีย", add_r:"ยาเงาซิงค์กรดแอมโมเนีย", add_note:"การทำงานของส่วนประกอบ: รักษาระดับตามแนะนำ วิเคราะห์ Zn รายสัปดาห์ เติมตามผลวิเคราะห์ คลอไรด์ตรวจ/เติมทุกวัน ส่วนยาเงาและยาพื้นลดลงตามการผลิต ให้ปรับตามผล Hull‑cell",
+        add_th_item:"รายการ", add_th_rate:"อัตราแนะนำ", add_m:"ยาพื้นซิงค์กรดแอมโมเนีย", add_m1:"100–200 มล./1,000 Ah ต่อบ่อ 1,000 ลิตร", add_r:"ยาเงาซิงค์กรดแอมโมเนีย", add_r1:"100–150 มล./1,000 Ah ต่อบ่อ 1,000 ลิตร", add_note:"การทำงานของส่วนประกอบ: รักษาระดับตามแนะนำ วิเคราะห์ Zn รายสัปดาห์ เติมตามผลวิเคราะห์ คลอไรด์ตรวจ/เติมทุกวัน ส่วนยาเงาและยาพื้นลดลงตามการผลิต ให้ปรับตามผล Hull‑cell",
 
         mon_h:"การตรวจสอบสภาพการดำเนินงาน & การกรอง", 
         mon_ph: "ค่า pH ที่เหมาะสมสำหรับน้ำยาชุบซิงค์กรดอยู่ที่ประมาณ 5.2 การควบคุมค่า pH ให้คงที่อยู่เสมอเป็นสิ่งสำคัญอย่างยิ่ง เพราะหากค่า pH ต่ำเกินไป (เป็นกรดมาก) จะทำให้ประสิทธิภาพการชุบลดลง และหากค่า pH สูงเกินไป (เป็นด่าง) อาจทำให้เกิดการตกตะกอนของสารเคมีได้ ดังนั้น จึงควร ตรวจสอบและแก้ไขค่า pH ทุกวัน เพื่อรักษาคุณภาพของน้ำยาให้อยู่ในสภาวะที่เหมาะสมอยู่เสมอ",
@@ -701,7 +702,7 @@
         mk_zncl2:"Zinc chloride", mk_nh4cl:"Ammonium chloride", mk_m:"Ammonium acid zinc carrier (ACIDZINC 99 M)", mk_r:"Ammonium acid zinc brightener (ACIDZINC 99 R)",
 
         add_h:"Carrier/Brightener additions", add_lead:"Approximate additions per 1,000 Ah (verify with Hull‑cell & production)",
-        add_th_item:"Item", add_th_rate:"Suggested rate", add_m:"Ammonium acid zinc carrier", add_r:"Ammonium acid zinc brightener", add_note:"Maintain components within target; check Zn weekly and adjust; check chloride daily; carrier/brightener consumption tracks production — tune via Hull‑cell.",
+        add_th_item:"Item", add_th_rate:"Suggested rate", add_m:"Ammonium acid zinc carrier", add_m1:"100–200 mL / 1,000 Ah per 1,000 L bath", add_r:"Ammonium acid zinc brightener", add_r1:"100–150 mL / 1,000 Ah per 1,000 L bath", add_note:"Maintain components within target; check Zn weekly and adjust; check chloride daily; carrier/brightener consumption tracks production — tune via Hull‑cell.",
 
         mon_h:"Monitoring & Filtration",
         mon_ph: "The optimal pH for an acid zinc bath is around 5.2. Keeping pH constant is critical: if pH is too low (more acidic), deposition efficiency drops; if pH is too high (alkaline), chemical precipitation may occur. Therefore, check and correct the bath pH daily to keep it within the proper operating window.",
