--- a/products/platingcoating/zincplating/troubleshootingnoncyanidezinc/index.html
+++ b/products/platingcoating/zincplating/troubleshootingnoncyanidezinc/index.html
@@ -3,12 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title data-i18n-key="title">Cyanide-free Zinc Plating — ชุบซิงค์หรือสังกะสีแบบไม่ใช้ไซยาไนด์ | Baume Chemical</title>
+  <title data-i18n-key="title">ชุบซิงค์ไม่ใช้ไซยาไนด์ (Cyanide-free Zinc Plating) — คู่มือ สูตรบ่อ & แก้ปัญหา | Baume Chemical</title>
 
   <!-- SEO base -->
-  <meta name="description" content="ชุบซิงค์หรือสังกะสีแบบไม่ใช้ไซยาไนด์ (Cyanide-free): เปรียบเทียบกรด/ด่าง, สูตรเดินบ่อ, เงื่อนไขการทำงาน, ฟีเจอร์ 6 ข้อ, การเติมบ่อ, การแก้ปัญหา และความปลอดภัย">
+  <meta name="description" content="คู่มือชุบซิงค์ไม่ใช้ไซยาไนด์: เปรียบเทียบกรด/ด่าง, สูตรเดินบ่อ Alkaline, ช่วงค่าพารามิเตอร์, การเติมบ่อ (มล./kAh), แนวทางแก้ปัญหา และข้อควรปลอดภัยสำหรับไลน์ชุบอุตสาหกรรม">
   <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
   <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/zincplating/troubleshootingnoncyanidezinc/index.html">
+
+  <!-- Icons -->
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
@@ -19,25 +21,80 @@
   <!-- Open Graph -->
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="Baume Chemical">
-  <meta property="og:title" content="Cyanide-free Zinc Plating — ชุบซิงค์หรือสังกะสีแบบไม่ใช้ไซยาไนด์">
-  <meta property="og:description" content="สารละลายกรด/ด่าง, สูตร Make-up, พารามิเตอร์, และแนวทางแก้ปัญหา">
+  <meta property="og:locale" content="th_TH">
+  <meta property="og:locale:alternate" content="en_US">
+  <meta property="og:title" content="ชุบซิงค์ไม่ใช้ไซยาไนด์ (Cyanide-free Zinc Plating) — คู่มือ + สูตรบ่อ">
+  <meta property="og:description" content="สรุปกรด/ด่าง สูตรเดินบ่อ พารามิเตอร์ การเติมบ่อ (มล./kAh) และแนวทางแก้ปัญหา">
   <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/zincplating/troubleshootingnoncyanidezinc/index.html">
   <meta property="og:image" content="https://img2.pic.in.th/pic/thumbnail-7.jpg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:image:alt" content="ภาพตัวอย่างชิ้นงานโลหะที่ผ่านการชุบสังกะสีแบบไม่ใช้ไซยาไนด์">
   <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="ชุบซิงค์ไม่ใช้ไซยาไนด์ — คู่มือ + สูตรบ่อ | Baume Chemical">
+  <meta name="twitter:description" content="สรุปประเภทกรด/ด่าง สูตรเดินบ่อ พารามิเตอร์ เติมบ่อ และ Troubleshooting">
+  <meta name="twitter:image" content="https://img2.pic.in.th/pic/thumbnail-7.jpg">
 
-  <!-- Fonts -->
+  <!-- Fonts & connections -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://flagcdn.com" crossorigin>
+  <link rel="preconnect" href="https://img2.pic.in.th" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
 
-  <!-- Preload hero & feature images (can be replaced with your assets) -->
-  <link rel="preload" as="image" href="https://images.unsplash.com/photo-1531327431456-c57a5a851e2a?q=80&w=1600&auto=format&fit=crop"/>
-  <link rel="preload" as="image" href="https://images.unsplash.com/photo-1581090464777-f3220bbe1b8b?q=80&w=1200&auto=format&fit=crop"/>
-  <link rel="preload" as="image" href="https://images.unsplash.com/photo-1581093588401-16e7c09a5cda?q=80&w=1200&auto=format&fit=crop"/>
-  <link rel="preload" as="image" href="https://images.unsplash.com/photo-1519003300449-424ad0405076?q=80&w=1200&auto=format&fit=crop"/>
-  <link rel="preload" as="image" href="https://images.unsplash.com/photo-1581092580491-7c74c6c2d5b6?q=80&w=1200&auto=format&fit=crop"/>
-  <link rel="preload" as="image" href="https://images.unsplash.com/photo-1581091215367-59ab6b4e3c3d?q=80&w=1200&auto=format&fit=crop"/>
-  <link rel="preload" as="image" href="https://images.unsplash.com/photo-1581090700227-1e37b190418e?q=80&w=1200&auto=format&fit=crop"/>
+  <!-- Preload actual hero -->
+  <link rel="preload" as="image" href="https://img2.pic.in.th/pic/thumbnail-7.jpg"/>
+
+  <script type="application/ld+json">
+{
+  "@context":"https://schema.org",
+  "@type":"Organization",
+  "name":"Baume Chemical",
+  "alternateName":["Baume Chemical","Baume"],
+  "url":"https://www.baumechemical.com/",
+  "logo":"https://img2.pic.in.th/pic/Baume.jpg"
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context":"https://schema.org",
+  "@type":"BreadcrumbList",
+  "itemListElement":[
+    {"@type":"ListItem","position":1,"name":"Products","item":"https://www.baumechemical.com/products.html"},
+    {"@type":"ListItem","position":2,"name":"Plating","item":"https://www.baumechemical.com/products/platingcoating/"},
+    {"@type":"ListItem","position":3,"name":"Zinc Plating","item":"https://www.baumechemical.com/products/platingcoating/zincplating/"},
+    {"@type":"ListItem","position":4,"name":"Cyanide-free Zinc","item":"https://www.baumechemical.com/products/platingcoating/zincplating/troubleshootingnoncyanidezinc/"}
+  ]
+}
+</script>
+
+<!-- TechArticle + FAQ (สรุป Q/A จากหัวข้อแก้ปัญหา) -->
+<script type="application/ld+json">
+{
+  "@context":"https://schema.org",
+  "@type":"TechArticle",
+  "headline":"Cyanide-free Zinc Plating — คู่มือ สูตรบ่อ & แก้ปัญหา",
+  "about":["Zinc plating","Cyanide-free zinc","Alkaline zinc bath"],
+  "alternateName":["Baume Chemical","Baume"],
+  "inLanguage":"th",
+  "publisher":{"@type":"Organization","name":"Baume Chemical"},
+  "mainEntityOfPage":"https://www.baumechemical.com/products/platingcoating/zincplating/troubleshootingnoncyanidezinc/"
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context":"https://schema.org",
+  "@type":"FAQPage",
+  "mainEntity":[
+    {"@type":"Question","name":"ชุบติดช้าต้องเช็คอะไรบ้าง?","acceptedAnswer":{"@type":"Answer","text":"ปรับ Zn 8–22 g/L, คุมอุณหภูมิ 30–32 °C, ตรวจแอโนด/ตู้ไฟ, ลดความหนาแน่นโหลด และตรวจการปนเปื้อนไซยาไนด์"}},
+    {"@type":"Question","name":"ผิวไหม้บริเวณกระแสสูงแก้อย่างไร?","acceptedAnswer":{"@type":"Answer","text":"ลดกระแส/เพิ่มระยะห่าง, เพิ่มการกวนให้สม่ำเสมอ, ปรับพารามิเตอร์ให้อยู่ในช่วง, ตรวจสภาพผ้าพันแอโนด"}},
+    {"@type":"Question","name":"ผิวมัว LCD–กลางเกิดจากอะไร?","acceptedAnswer":{"@type":"Answer","text":"ยาเงาต่ำ, อุณหภูมิสูง, คลอไรด์ไม่เหมาะสม (กรด) หรือคาร์บอเนต/สิ่งปนเปื้อน (ด่าง) → ปรับปริมาณ/บำรุงรักษาบ่อ"}},
+    {"@type":"Question","name":"ผิวขรุขระเกิดจากอะไร?","acceptedAnswer":{"@type":"Answer","text":"ตะกอน/แผ่นซิงค์มากไป, ถุงผ้าขาด, เป่าลมแรง, ใช้ยาเงาเกิน หรือบ่อร้อน → กรอง/ลดลม/ลดโดส/คุมอุณหภูมิ"}}
+  ]
+}
+</script>
 
   <style>
     :root{
@@ -397,7 +454,7 @@
       <section id="additions" class="reveal section-block" aria-labelledby="add-h">
         <h2 id="add-h" class="section" data-i18n-key="add_h">การเติมบ่อ & การบำรุงรักษา</h2>
 
-        <p class="lead" data-i18n-key="add_lead">การเติมน้ำยา (มล./KAH)</p>
+        <p class="lead" data-i18n-key="add_lead">การเติมน้ำยา (มล./kAh)</p>
         <div class="table">
           <table>
             <thead>
@@ -560,7 +617,7 @@
         cond_temp:"อุณหภูมิ", cond_cd:"ความหนาแน่นกระแส", cond_area:"Cathode : Anode (พื้นที่)",
 
         add_h:"การเติมบ่อ & การบำรุงรักษา",
-        add_lead:"การเติมน้ำยา (มล./KAH)",
+        add_lead:"การเติมน้ำยา (มล./kAh)",
         add_th_name:"ชื่อผลิตภัณฑ์", add_th_rate:"ปริมาณแนะนำ",
         add_a:"MILLENIUM NCZ 1221 A", add_b:"MILLENIUM NCZ 1221 B", add_c:"MILLENIUM NCZ 1221 C", add_water:"หากคุณภาพน้ำไม่ดี",
         mnt_zn_na:"วิเคราะห์ซิงค์ และ โซเดียมไฮดรอกไซด์ เป็นระยะ; คุมโซเดียมไฮดรอกไซด์ : ซิงค์ ตามชนิดบ่อ",
@@ -572,7 +629,7 @@
 
         tr_h:"แนวทางแก้ปัญหาเบื้องต้น",
       tr_slow: "<strong>ชุบติดช้า:</strong> เกิดจากปริมาณ ซิงค์ ที่ต่ำหรือ ยาพื้น ที่มากเกินไป ทำให้ประสิทธิภาพการชุบลดลง สามารถแก้ไขได้โดยปรับปริมาณซิงค์ให้อยู่ในระดับที่เหมาะสม (8–22 g/L) และควบคุมอุณหภูมิของน้ำยาให้คงที่ (30–32 °C) นอกจากนี้ ควรตรวจสอบความหนาแน่นของชิ้นงานในบ่อ แอโนด และตู้ควบคุมกระแสไฟฟ้า รวมถึงการปนเปื้อนไซยาไนด์",
-      tr_burn: "<strong>ผิวไหม้บริเวณกระแสสูง:</strong> ปัญหานี้มักเกิดบริเวณที่มีกระแสไฟฟ้าสูงเกินไป สาเหตุหลักมาจาก กระแสที่สูงเกิน, การกวนน้ำยาไม่สม่ำเสมอ, คลอไรด์สูง, หรืออุณหภูมิและ pH ของน้ำยาที่ต่ำเกินไป การแก้ไขคือการปรับค่าพารามิเตอร์ต่างๆ ให้อยู่ในช่วงที่เหมาะสม",
+      tr_burn: "<strong>ผิวไหม้บริเวณกระแสสูง:</strong> ปัญหานี้มักเกิดบริเวณที่มีกระแสไฟฟ้าสูงเกินไป สาเหตุหลักมาจาก กระแสที่สูงเกิน, การกวนน้ำยาไม่สม่ำเสมอ, หรืออุณหภูมิและ pH ของน้ำยาที่ต่ำเกินไป การแก้ไขคือการปรับค่าพารามิเตอร์ต่างๆ ให้อยู่ในช่วงที่เหมาะสม",
       tr_haze: "<strong>ผิวมัวบริเวณกระแสต่ำ-กลาง:</strong> ผิวเคลือบมีลักษณะมัวหรือด้าน สาเหตุคือ ยาเงา (brightener) มีปริมาณน้อยเกินไป อุณหภูมิสูง หรือปริมาณ คลอไรด์ ไม่เหมาะสม นอกจากนี้ การ ปนเปื้อนของโลหะหนัก และสารอินทรีย์ก็เป็นสาเหตุสำคัญ",
       tr_pit: "<strong>ผิวเป็นหลุม/ตามด:</strong> เป็นรูพรุนเล็กๆ บนผิวเคลือบ เกิดจาก ยาเงามากเกินไป, คลอไรด์สูง หรือการ ปนเปื้อนของเหล็ก และสารอื่นๆ",
       tr_spot: "<strong>ผิวเป็นดวง/ชุบไม่ติดเป็นที่:</strong> ผิวเคลือบไม่สม่ำเสมอเป็นหย่อมๆ สาเหตุหลักคือการ ปนเปื้อนโครเมียม, มี ยาเงามากเกินไป หรือการ ปนเปื้อนสารอินทรีย์ ที่ขัดขวางการเกาะตัวของซิงค์หรือสังกะสี",
@@ -628,7 +685,7 @@
         cond_temp:"Temperature", cond_cd:"Current density", cond_area:"Cathode : Anode (area)",
 
         add_h:"Additions & Maintenance",
-        add_lead:"Additions (mL/KAH)",
+        add_lead:"Additions (ml/kAh)",
         add_th_name:"Product", add_th_rate:"Suggested dose",
         add_a:"MILLENIUM NCZ 1221 A", add_b:"MILLENIUM NCZ 1221 B", add_c:"MILLENIUM NCZ 1221 C", add_water:"If water quality is poor",
         mnt_zn_na:"Check Zinc and Sodium hydroxide routinely; keep Sodium hydroxide : Zinc within target by line type",
@@ -639,7 +696,7 @@
 
         tr_h:"Troubleshooting",
       tr_slow: "<strong>Slow deposition:</strong> Typically due to low zinc or excessive main additive, which reduces plating efficiency. Correct by adjusting Zn to 8–22 g/L and maintaining a stable bath temperature at 30–32 °C. Also check load density in the tank, anode condition, power supply, and possible cyanide contamination.",
-      tr_burn: "<strong>High-current burning:</strong> Usually appears at edges/corners where current density is excessive. Common causes include overcurrent, uneven solution agitation, high chloride, or low bath temperature/pH. Bring all parameters back into their proper operating ranges.",
+      tr_burn: "<strong>High-current burning:</strong> Usually appears at edges/corners where current density is excessive. Common causes include overcurrent, uneven solution agitation, or low bath temperature/pH. Bring all parameters back into their proper operating ranges.",
       tr_haze: "<strong>Low–mid current density haze:</strong> A dull/matte appearance often caused by insufficient brightener, elevated temperature, improper chloride level, or contamination by heavy metals/organics.",
       tr_pit: "<strong>Pitting:</strong> Small pinholes in mid–high current regions, often from excessive brightener, high chloride, or contamination by iron/other species.",
       tr_spot: "<strong>Spotting / bare areas:</strong> Patchy, non-uniform coverage commonly due to chromium contamination, over-brightening, or organic films that inhibit zinc deposition.",
